--- a/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE-REQUEST.yml
@@ -46,11 +46,11 @@ body:
     validations:
       required: true
   - type: textarea
-    id: mod
+    id: mods
     attributes:
       label: "Mod/mods to add"
       description: Which mod/mods do you wanna request to be added to the modpack?
-      placeholder: Example: Fabric API, Sodium etc. etc.
+      placeholder: Fabric API, Sodium etc. etc.
     validations:
       required: true
   - type: textarea
